xpontus-current/src/net/sf/xpontus/view/editor/syntax/c/CParser.java
/* Generated By:JavaCC: Do not edit this line. CParser.java */
package net.sf.xpontus.view.editor.syntax.c;

import net.sf.xpontus.view.editor.ILexer;
import net.sf.xpontus.view.editor.syntax.CharStream;
import net.sf.xpontus.view.editor.syntax.FastCharStream;
import net.sf.xpontus.view.editor.syntax.ParseException;
import net.sf.xpontus.view.editor.syntax.Token;

import java.util.Enumeration;
import java.util.Hashtable;
import java.util.Stack;


public class CParser implements CParserConstants, ILexer
  {
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;
    static private int[] jj_la1_2;

    static
      {
        jj_la1_0();
        jj_la1_1();
        jj_la1_2();
      }

    // Hastable for storing typedef types
    private Hashtable types = new Hashtable();

    // Stack for determining when the parser
    // is parsing a typdef definition.
    private Stack typedefParsingStack = new Stack();
    public CParserTokenManager token_source;
    public Token token;
    public Token jj_nt;
    private int jj_ntk;
    private Token jj_scanpos;
    private Token jj_lastpos;
    private int jj_la;
    public boolean lookingAhead = false;
    private boolean jj_semLA;
    private int jj_gen;
    final private int[] jj_la1 = new int[81];
    final private JJCalls[] jj_2_rtns = new JJCalls[34];
    private boolean jj_rescan = false;
    private int jj_gc = 0;
    final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    private java.util.Vector jj_expentries = new java.util.Vector();
    private int[] jj_expentry;
    private int jj_kind = -1;
    private int[] jj_lasttokens = new int[100];
    private int jj_endpos;

    public CParser()
      {
        this((FastCharStream) null);
      }

    public CParser(CharStream stream)
      {
        token_source = new CParserTokenManager(stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;

        for (int i = 0; i < 81; i++)
            jj_la1[i] = -1;

        for (int i = 0; i < jj_2_rtns.length; i++)
            jj_2_rtns[i] = new JJCalls();
      }

    public CParser(CParserTokenManager tm)
      {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;

        for (int i = 0; i < 81; i++)
            jj_la1[i] = -1;

        for (int i = 0; i < jj_2_rtns.length; i++)
            jj_2_rtns[i] = new JJCalls();
      }

    // Returns true if the given string is
    // a typedef type.
    private boolean isType(String type)
      {
        if (types.get(type) != null)
          {
            return true;
          }

        return false;
      }

    // Add a typedef type to those already defined
    private void addType(String type)
      {
        types.put(type, Boolean.TRUE);
      }

    // Prints out all the types used in parsing the c source
    private void printTypes()
      {
        Enumeration _enum = types.keys();

        while (_enum.hasMoreElements())
          {
            System.out.println(_enum.nextElement());
          }
      }

    final public void TranslationUnit() throws ParseException
      {
label_1: 
        while (true)
          {
            ExternalDeclaration();

            if (jj_2_1(1))
              {
                ;
              }
            else
              {
                break label_1;
              }
          }

        printTypes();
      }

    final public void ExternalDeclaration() throws ParseException
      {
        if (jj_2_2(2147483647))
          {
            FunctionDefinition();
          }
        else if (jj_2_3(1))
          {
            Declaration();
          }
        else
          {
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    final public void FunctionDefinition() throws ParseException
      {
        if (jj_2_4(2147483647))
          {
            DeclarationSpecifiers();
          }
        else
          {
            ;
          }

        Declarator();

        if (jj_2_5(1))
          {
            DeclarationList();
          }
        else
          {
            ;
          }

        CompoundStatement();
      }

    final public void Declaration() throws ParseException
      {
        DeclarationSpecifiers();

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case IDENTIFIER:
        case 56:
        case 60:
            InitDeclaratorList();

            break;

        default:
            jj_la1[0] = jj_gen;
            ;
          }

        jj_consume_token(50);
      }

    final public void DeclarationList() throws ParseException
      {
label_2: 
        while (true)
          {
            Declaration();

            if (jj_2_6(2147483647))
              {
                ;
              }
            else
              {
                break label_2;
              }
          }
      }

    final public void DeclarationSpecifiers() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case REGISTER:
        case TYPEDEF:
        case EXTERN:
        case STATIC:
        case AUTO:
            StorageClassSpecifier();

            if (jj_2_7(2147483647))
              {
                DeclarationSpecifiers();
              }
            else
              {
                ;
              }

            break;

        default:
            jj_la1[1] = jj_gen;

            if (jj_2_10(1))
              {
                TypeSpecifier();

                if (jj_2_8(2147483647))
                  {
                    DeclarationSpecifiers();
                  }
                else
                  {
                    ;
                  }
              }
            else
              {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                  {
                case VOLATILE:
                case CONST:
                    TypeQualifier();

                    if (jj_2_9(2147483647))
                      {
                        DeclarationSpecifiers();
                      }
                    else
                      {
                        ;
                      }

                    break;

                default:
                    jj_la1[2] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                  }
              }
          }
      }

    final public void StorageClassSpecifier() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case AUTO:
            jj_consume_token(AUTO);

            break;

        case REGISTER:
            jj_consume_token(REGISTER);

            break;

        case STATIC:
            jj_consume_token(STATIC);

            break;

        case EXTERN:
            jj_consume_token(EXTERN);

            break;

        case TYPEDEF:
            jj_consume_token(TYPEDEF);
            typedefParsingStack.push(Boolean.TRUE);

            break;

        default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    final public void TypeSpecifier() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case VOID:
            jj_consume_token(VOID);

            break;

        case CHAR:
            jj_consume_token(CHAR);

            break;

        case SHORT:
            jj_consume_token(SHORT);

            break;

        case INT:
            jj_consume_token(INT);

            break;

        case LONG:
            jj_consume_token(LONG);

            break;

        case FLOAT:
            jj_consume_token(FLOAT);

            break;

        case DOUBLE:
            jj_consume_token(DOUBLE);

            break;

        case SIGNED:
            jj_consume_token(SIGNED);

            break;

        case UNSIGNED:
            jj_consume_token(UNSIGNED);

            break;

        case STRUCT:
        case UNION:
            StructOrUnionSpecifier();

            break;

        case ENUM:
            EnumSpecifier();

            break;

        default:
            jj_la1[4] = jj_gen;

            if (isType(getToken(1).image))
              {
                TypedefName();
              }
            else
              {
                jj_consume_token(-1);
                throw new ParseException();
              }
          }
      }

    final public void TypeQualifier() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case CONST:
            jj_consume_token(CONST);

            break;

        case VOLATILE:
            jj_consume_token(VOLATILE);

            break;

        default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    final public void StructOrUnionSpecifier() throws ParseException
      {
        typedefParsingStack.push(Boolean.FALSE);
        StructOrUnion();

        if (jj_2_11(3))
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case IDENTIFIER:
                jj_consume_token(IDENTIFIER);

                break;

            default:
                jj_la1[6] = jj_gen;
                ;
              }

            jj_consume_token(51);
            StructDeclarationList();
            jj_consume_token(52);
          }
        else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case IDENTIFIER:
                jj_consume_token(IDENTIFIER);

                break;

            default:
                jj_la1[7] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
          }

        typedefParsingStack.pop();
      }

    final public void StructOrUnion() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case STRUCT:
            jj_consume_token(STRUCT);

            break;

        case UNION:
            jj_consume_token(UNION);

            break;

        default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    final public void StructDeclarationList() throws ParseException
      {
label_3: 
        while (true)
          {
            StructDeclaration();

            if (jj_2_12(1))
              {
                ;
              }
            else
              {
                break label_3;
              }
          }
      }

    final public void InitDeclaratorList() throws ParseException
      {
        InitDeclarator();
label_4: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 53:
                ;

                break;

            default:
                jj_la1[9] = jj_gen;

                break label_4;
              }

            jj_consume_token(53);
            InitDeclarator();
          }

        // Finished with a typedefDeclaration??
        if (!(typedefParsingStack.empty()) &&
                ((Boolean) typedefParsingStack.peek()).booleanValue())
          {
            typedefParsingStack.pop();
          }
      }

    final public void InitDeclarator() throws ParseException
      {
        Declarator();

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 54:
            jj_consume_token(54);
            Initializer();

            break;

        default:
            jj_la1[10] = jj_gen;
            ;
          }
      }

    final public void StructDeclaration() throws ParseException
      {
        SpecifierQualifierList();
        StructDeclaratorList();
        jj_consume_token(50);
      }

    final public void SpecifierQualifierList() throws ParseException
      {
        if (jj_2_15(1))
          {
            TypeSpecifier();

            if (jj_2_13(2147483647))
              {
                SpecifierQualifierList();
              }
            else
              {
                ;
              }
          }
        else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case VOLATILE:
            case CONST:
                TypeQualifier();

                if (jj_2_14(2147483647))
                  {
                    SpecifierQualifierList();
                  }
                else
                  {
                    ;
                  }

                break;

            default:
                jj_la1[11] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
          }
      }

    final public void StructDeclaratorList() throws ParseException
      {
        StructDeclarator();
label_5: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 53:
                ;

                break;

            default:
                jj_la1[12] = jj_gen;

                break label_5;
              }

            jj_consume_token(53);
            StructDeclarator();
          }
      }

    final public void StructDeclarator() throws ParseException
      {
        if (jj_2_16(3))
          {
            Declarator();
          }
        else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case IDENTIFIER:
            case 55:
            case 56:
            case 60:

                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                  {
                case IDENTIFIER:
                case 56:
                case 60:
                    Declarator();

                    break;

                default:
                    jj_la1[13] = jj_gen;
                    ;
                  }

                jj_consume_token(55);
                ConstantExpression();

                break;

            default:
                jj_la1[14] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
          }
      }

    final public void EnumSpecifier() throws ParseException
      {
        jj_consume_token(ENUM);

        if (jj_2_17(3))
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case IDENTIFIER:
                jj_consume_token(IDENTIFIER);

                break;

            default:
                jj_la1[15] = jj_gen;
                ;
              }

            jj_consume_token(51);
            EnumeratorList();
            jj_consume_token(52);
          }
        else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case IDENTIFIER:
                jj_consume_token(IDENTIFIER);

                break;

            default:
                jj_la1[16] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
          }
      }

    final public void EnumeratorList() throws ParseException
      {
        Enumerator();
label_6: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 53:
                ;

                break;

            default:
                jj_la1[17] = jj_gen;

                break label_6;
              }

            jj_consume_token(53);
            Enumerator();
          }
      }

    final public void Enumerator() throws ParseException
      {
        jj_consume_token(IDENTIFIER);

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 54:
            jj_consume_token(54);
            ConstantExpression();

            break;

        default:
            jj_la1[18] = jj_gen;
            ;
          }
      }

    final public void Declarator() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 60:
            Pointer();

            break;

        default:
            jj_la1[19] = jj_gen;
            ;
          }

        DirectDeclarator();
      }

    final public void DirectDeclarator() throws ParseException
      {
        Token t;

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case IDENTIFIER:
            t = jj_consume_token(IDENTIFIER);

            if (!(typedefParsingStack.empty()) &&
                    ((Boolean) typedefParsingStack.peek()).booleanValue())
              {
                addType(t.image);
              }

            break;

        case 56:
            jj_consume_token(56);
            Declarator();
            jj_consume_token(57);

            break;

        default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }

label_7: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 56:
            case 58:
                ;

                break;

            default:
                jj_la1[21] = jj_gen;

                break label_7;
              }

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 58:
                jj_consume_token(58);

                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                  {
                case INTEGER_LITERAL:
                case FLOATING_POINT_LITERAL:
                case CHARACTER_LITERAL:
                case STRING_LITERAL:
                case SIZEOF:
                case IDENTIFIER:
                case 56:
                case 60:
                case 77:
                case 86:
                case 87:
                case 90:
                case 91:
                case 92:
                case 93:
                    ConstantExpression();

                    break;

                default:
                    jj_la1[22] = jj_gen;
                    ;
                  }

                jj_consume_token(59);

                break;

            default:
                jj_la1[24] = jj_gen;

                if (jj_2_18(3))
                  {
                    jj_consume_token(56);
                    ParameterTypeList();
                    jj_consume_token(57);
                  }
                else
                  {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                      {
                    case 56:
                        jj_consume_token(56);

                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                          {
                        case IDENTIFIER:
                            IdentifierList();

                            break;

                        default:
                            jj_la1[23] = jj_gen;
                            ;
                          }

                        jj_consume_token(57);

                        break;

                    default:
                        jj_la1[25] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                      }
                  }
              }
          }
      }

    final public void Pointer() throws ParseException
      {
        jj_consume_token(60);

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case VOLATILE:
        case CONST:
            TypeQualifierList();

            break;

        default:
            jj_la1[26] = jj_gen;
            ;
          }

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 60:
            Pointer();

            break;

        default:
            jj_la1[27] = jj_gen;
            ;
          }
      }

    final public void TypeQualifierList() throws ParseException
      {
label_8: 
        while (true)
          {
            TypeQualifier();

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case VOLATILE:
            case CONST:
                ;

                break;

            default:
                jj_la1[28] = jj_gen;

                break label_8;
              }
          }
      }

    final public void ParameterTypeList() throws ParseException
      {
        ParameterList();

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 53:
            jj_consume_token(53);
            jj_consume_token(61);

            break;

        default:
            jj_la1[29] = jj_gen;
            ;
          }
      }

    final public void ParameterList() throws ParseException
      {
        ParameterDeclaration();
label_9: 
        while (true)
          {
            if (jj_2_19(2))
              {
                ;
              }
            else
              {
                break label_9;
              }
